@@ -4,7 +4,12 @@
 
 --------------------------------------------------------------------------
   v.3.6-Alpha1
-        - Sort malformed files into "Unknown (Broken)" rather then leaving
+	- Fix typo that caused song count to not be set on tag xml response
+        - Fix tag methods so that alpha_match and exact_match work
+        - Fix limit and offset not working on search_songs API method
+        - Fix import m3u on catalog build so it does something
+        - Fix inconsistent view during catalog operations        
+	- Sort malformed files into "Unknown (Broken)" rather then leaving
                 them in "Unknown (Orphaned)"
 	- Fix API democratic voting methods (Thx kindachris)
 	- Add server version to API ping response
